# aquila

./: README.md  config.toml  pyproject.toml
aquila/: blueprint.py  cocoa.py  config.py  config.toml  env.py  ghdl.py  gsim.py  log.py  manifest.py  mod.py  mojo.py  msim.py  ninja.py  process.py  quartz.py  script.py  vi.py  vsim.py  xpro.py  xsim.py
scripts/: mod.py  msim.py  quartz.py  voodoo.py
targets/: gsim.py  mod.py  mojo.py  msim.py  ninja.py
